adds validations to micropost model

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,5 +8,8 @@
 
   %body
   .container
+    -flash.each do |name, msg|
+      =content_tag(:div, msg, class:"alert alert-info")
+  .container
     = yield
 
