--- a/app/views/microposts/index.html.haml
+++ b/app/views/microposts/index.html.haml
@@ -1,15 +1,17 @@
 %h1 
   Microposts for
-  =@user ? @user.email : "All Users"
+  =@user ? @user.name : "All Users"
 
 -@microposts.each do |micropost|
   .posts
-    =micropost.title
+    %h3=micropost.title
     =micropost.content
-    =link_to micropost.user.email, {controller: :users, action: :show, id: micropost.user.id}
+    by
+    =link_to micropost.user.name, {controller: :users, action: :show_user_microposts, id: micropost.user.id}
 
     = link_to 'Show', micropost 
     = link_to 'Edit', edit_micropost_path(micropost) 
     = link_to 'Destroy', micropost, :method => :delete, :data => { :confirm => 'Are you sure?' }
 %br
 = link_to 'New Micropost', new_micropost_path
+=link_to 'Back', root_path
